Added template code from sketch

--- a/index.html
+++ b/index.html
@@ -4,13 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project 1 Sketch</title>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <h1>
-            Hello
+    <section id="landing-page" class="hidden">
+        <h1 class="hello">
+            Hello,
         </h1>
+
+        <div class="username-container">
+            <h1 id="username" contenteditable="true">
+            
+            </h1>
+
+            <div class="arrow-icon-container" id="btn">
+                <i class="gg-push-chevron-right-o"></i>
+            </div>
+        </div>
+
+        <h2>
+            let's pick something to watch today.
+        </h2>
     </section>
+
+    <section id="other-page">
+        <h1 class="hello">
+            What streaming service do you prefer?
+        </h1>
+
+        <div class="container">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
