Added utility functions for future HTML document tags and ids. Created currentIndex and posListener functions that handles what's currently shown on the user's screen.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    <section id="landing-page" class="hidden">
+    <section id="landing-page" class="hidden" data-index="1">
         <h1 class="hello">
             Hello,
         </h1>
@@ -29,7 +29,7 @@
         </h2>
     </section>
 
-    <section id="other-page">
+    <section id="other-page" data-index="2">
         <h1 class="hello">
             What streaming service do you prefer?
         </h1>
@@ -43,6 +43,6 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 </html>
