--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1 Sketch</title>
     
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <section id="landing-page" class="hidden">
@@ -50,7 +50,7 @@
             What genre do want to watch?
         </h1>
 
-        <div class ="">
+        <div class ="container">
             <div></div>
             <div></div>
             <div></div>
