Committing code from last night. Little changes, just trying to pull new content

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <section id="series-movie">
+    <section id="series-movie" data-index="2">
         <h1 class="hello">
             What Series or Movie do you want to see?
         </h1>
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-    <section id="results">
+    <section id="results" data-index="2">
         <h1 class="hello">
             Your choice of *insert name of movie or series here*
         </h1>
