--- a/index.html
+++ b/index.html
@@ -39,12 +39,18 @@
         </h1>
 
         <div class="btn-group" role="group" aria-label="Basic outlined example">
-                <button type="button" class="btn btn-outline-primary">Netflix</button>
-                <button type="button" class="btn btn-outline-primary">Hulu</button>
-                <button type="button" class="btn btn-outline-primary">AppleTV Plus</button>
-                <button type="button" class="btn btn-outline-primary">AmazonPrime Video</button>
-                <button type="button" class="btn btn-outline-primary">HBO Max</button>
-                <button type="button" class="btn btn-outline-primary">Disney+</button>
+                <input type="checkbox" id="netflix" name="netflix" value="Netflix">
+                <label for="netflix">Netflix</label>
+                <input type="checkbox" id="hulu" name="hulu" value="Hulu">
+                <label for="hulu">Hulu</label>
+                <input type="checkbox" id="apple" name="apple" value="AppleTV Plus">
+                <label for="apple">AppleTV Plus</label>
+                <input type="checkbox" id="prime" name="prime" value="AmazonPrime Video">
+                <label for="prime">AmazonPrime Video</label>
+                <input type="checkbox" id="hbo" name="hbo" value="HBO Max">
+                <label for="hbo">HBO Max</label>
+                <input type="checkbox" id="disney" name="disney" value="Disney+">
+                <label for="disney">Disney+</button>
         </div>
     </section>
 
@@ -82,7 +88,7 @@
         <img src="url" alt="alternatetext">
     </section>
 
-    <script src="assets/script.js"></script>
+    <script src="./assets/script.js"></script>
 
 </body>
 </html>
