.fetch API addons from class

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         </h1>
 
         <div class="btn-group" role="group" aria-label="Basic outlined example">
-                <button type="button" class="btn btn-outline-primary">Netflix</button>
-                <button type="button" class="btn btn-outline-primary">Hulu</button>
-                <button type="button" class="btn btn-outline-primary">AppleTV Plus</button>
-                <button type="button" class="btn btn-outline-primary">AmazonPrime Video</button>
-                <button type="button" class="btn btn-outline-primary">HBO Max</button>
-                <button type="button" class="btn btn-outline-primary">Disney+</button>
+                <button type="button">Netflix</button>
+                <button type="button">Hulu</button>
+                <button type="button">AppleTV Plus</button>
+                <button type="button">AmazonPrime Video</button>
+                <button type="button">HBO Max</button>
+                <button type="button">Disney+</button>
         </div>
     </section>
 
@@ -54,12 +54,12 @@
         </h1>
 
         <div class="btn-group" role="group" aria-label="Basic outlined example">
-            <button type="button" class="btn btn-outline-primary">Action</button>
-            <button type="button" class="btn btn-outline-primary">Drama</button>
-            <button type="button" class="btn btn-outline-primary">Crime</button>
-            <button type="button" class="btn btn-outline-primary">Comedy</button>
-            <button type="button" class="btn btn-outline-primary">Romance</button>
-            <button type="button" class="btn btn-outline-primary">Kids</button>
+            <button type="button">Action</button>
+            <button type="button">Drama</button>
+            <button type="button">Crime</button>
+            <button type="button">Comedy</button>
+            <button type="button">Romance</button>
+            <button type="button">Kids</button>
     </div>
     </section>
 
@@ -69,8 +69,8 @@
         </h1>
 
         <div class="btn-group" role="group" aria-label="Basic outlined example">
-            <button type="button" class="btn btn-outline-primary">TV Series</button>
-            <button type="button" class="btn btn-outline-primary">Movies</button>
+            <button type="button">TV Series</button>
+            <button type="button">Movies</button>
         </div>
     </section>
 
@@ -79,10 +79,10 @@
             Your choice of *insert name of movie or series here*
         </h1>
 
-        <img src="url" alt="alternatetext">
+        <!-- <img src="url" alt="alternatetext"> -->
     </section>
 
-    <script src="assets/script.js"></script>
+    <script src="./assets/script.js"></script>
 
 </body>
 </html>
