add genre buttons, button layout

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         </h1>
 
         <div class="btn-group" role="group" aria-label="Basic outlined example">
-                <button type="button" class="btn btn-outline-primary">Netflix</button>
-                <button type="button" class="btn btn-outline-primary">Hulu</button>
-                <button type="button" class="btn btn-outline-primary">AppleTV Plus</button>
-                <button type="button" class="btn btn-outline-primary">AmazonPrime Video</button>
-                <button type="button" class="btn btn-outline-primary">HBO Max</button>
-                <button type="button" class="btn btn-outline-primary">Disney+</button>
+                <button type="button">Netflix</button>
+                <button type="button">Hulu</button>
+                <button type="button">AppleTV Plus</button>
+                <button type="button">AmazonPrime Video</button>
+                <button type="button">HBO Max</button>
+                <button type="button">Disney+</button>
         </div>
     </section>
 
@@ -54,12 +54,34 @@
         </h1>
 
         <div class="btn-group" role="group" aria-label="Basic outlined example">
-            <button type="button" class="btn btn-outline-primary">Action</button>
-            <button type="button" class="btn btn-outline-primary">Drama</button>
-            <button type="button" class="btn btn-outline-primary">Crime</button>
-            <button type="button" class="btn btn-outline-primary">Comedy</button>
-            <button type="button" class="btn btn-outline-primary">Romance</button>
-            <button type="button" class="btn btn-outline-primary">Kids</button>
+            <button type="button">Biography</button>
+            <button type="button">Film Noir</button>
+            <button type="button">Game Show</button>
+            <button type="button">Musical</button>
+            <button type="button">Sport</button>
+            <button type="button">Short</button>
+            <button type="button">Adult</button>
+            <button type="button">Adventure</button>
+            <button type="button">Fantasy</button>
+            <button type="button">Animation</button>
+            <button type="button">Drama</button>
+            <button type="button">Horror</button>
+            <button type="button">Action</button>
+            <button type="button">Comedy</button>
+            <button type="button">History</button>
+            <button type="button">Western</button>
+            <button type="button">Thriller</button>
+            <button type="button">Crime</button>
+            <button type="button">Documentary</button>
+            <button type="button">Science Fiction</button>
+            <button type="button">Mystery</button>
+            <button type="button">Music</button>
+            <button type="button">Romance</button>
+            <button type="button">Family</button>
+            <button type="button">War</button>
+            <button type="button">News</button>
+            <button type="button">Reality</button>
+            <button type="button">Talk Show</button>
     </div>
     </section>
 
