--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <h2>
-            let's pick something to watch today.
+            Let's pick something to watch today.
         </h2>
 
     </section>
@@ -51,7 +51,6 @@
                 <label for="hbo">HBO Max</label>
                 <input type="checkbox" id="disney" name="disney" value="Disney+">
                 <label for="disney">Disney+</button>
->>>>>>> 5f5477932c14b32c94f20cf1dad267017741b876
         </div>
     </section>
 
@@ -86,7 +85,14 @@
             Your choice of *insert name of movie or series here*
         </h1>
 
-        <!-- <img src="url" alt="alternatetext"> -->
+        <div>
+        <iframe tabindex="-1" id="video-stream" src="https://www.youtube.com/watch?v=Yy0lhKK0s7g"></iframe>
+        </div>
+
+        <div>
+            <!-- <img src="url" alt="alternatetext"> -->
+        </div>
+
     </section>
 
     <script src="./assets/script.js"></script>
