--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                 <label for="hbo">HBO Max</label>
                 <input type="checkbox" id="disney" name="disney" value="Disney+">
                 <label for="disney">Disney+</button>
->>>>>>> 5f5477932c14b32c94f20cf1dad267017741b876
         </div>
     </section>
 
@@ -61,14 +60,66 @@
         </h1>
 
         <div class="btn-group" role="group" aria-label="Basic outlined example">
-            <button type="button">Action</button>
-            <button type="button">Drama</button>
-            <button type="button">Crime</button>
-            <button type="button">Comedy</button>
-            <button type="button">Romance</button>
-            <button type="button">Kids</button>
-    </div>
+            <input type="checkbox" id=“1” name=“biography” value=“Biography”>
+                <label for=“1”>Biography</label>
+            <input type="checkbox" id=“2” name=“film-noir” value=“Film-Noir”>
+                <label for=“2”>Film Noir</label>
+            <input type="checkbox" id=“3” name=“game-show” value=“Game-Show>
+                <label for=“3”>Game Show</label>
+            <input type="checkbox" id=“4” name=“musical” value=“Musical”>
+                <label for=“4”>Musical</label>
+            <input type="checkbox" id=“5” name=“sport” value=“Sport”>
+                <label for=“5”>Sport</label>
+            <input type="checkbox" id=“6” name=“short” value=“Short”>
+                <label for=“6”>Short</label>
+            <input type="checkbox" id=“7” name=“adult” value=“Adult”>
+                <label for=“7”>Adult</label>
+            <input type="checkbox" id=“12” name=“adventure” value=“Adventure”>
+                <label for=“12”>Adventure</label>
+            <input type="checkbox" id=“14” name=“fantasy value=“Fantasy”>
+                <label for=“14”>Fantasy</label>
+            <input type="checkbox" id=“16” name=“animation” value=“Animation”>
+                <label for=“16”>Animation</label>
+            <input type="checkbox" id=“18” name=“drama” value=“Drama”>
+                <label for=“18”>Drama</label>
+            <input type="checkbox" id=“27” name=“horror” value=“Horror”>
+                <label for=“27”>Horror</label>
+            <input type="checkbox" id=“28” name=“action” value=“Action”>
+                <label for=“28”>Action</label>
+            <input type="checkbox" id=“35” name=“comedy” value=“Comedy”>
+                <label for=“35”>Comedy</label>
+            <input type="checkbox" id=“36” name=“history” value=“History”>
+                <label for=“36”>History</label>
+            <input type="checkbox" id=“37” name=“western” value=“Western”>
+                <label for=“37”>Western</label>
+            <input type="checkbox" id=“53” name=“thriller” value=“Thriller”>
+                <label for=“53”>Thriller</label>
+            <input type="checkbox" id=“80” name=“crime” value=“Crime”>
+                <label for=“80”>Crime</label>
+            <input type="checkbox" id=“99” name=“documentary” value=“Documentary”>
+                <label for=“99”>Documentary</label>
+            <input type="checkbox" id=“878” name=“science-fiction” value=“Science-Fiction”>
+                <label for=“878”>Science Fiction</label>
+            <input type="checkbox" id=“9648” name=“mystery” value=“Mystery”>
+                <label for=“9648”>Mystery</label>
+            <input type="checkbox" id=“10402” name=“music” value=“Music”>
+                <label for=“10402”>Music</label>
+            <input type="checkbox" id=“10749” name=“romance” value=“Romance”>
+                <label for=“10749”>Romance</label>
+            <input type="checkbox" id="10751" name=“family” value=“Family”>
+                <label for=“10751”>Family</label>
+            <input type="checkbox" id=“10752” name=“war” value=“War”>
+                <label for=“10752”>War</label>
+            <input type="checkbox" id=“10763” name=“news” value=“News”>
+                <label for=“10763”>News</label>
+            <input type="checkbox" id=“10764” name=“reality” value=“Reality”>
+                <label for=“10764”>Reality</label>
+            <input type="checkbox" id=“10767” name=“talk-show” value=“Talk-Show”>
+                <label for=“10767”>Talk Show</label>
+        </div>
     </section>
+
+    <section id="series-movie" data-index="2">
 
     <section id="series-movie" data-index="2">
         <h1 class="hello">
