--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <label for="7">Adult</label>
                 <input type="checkbox" id="12" name="adventure" value="Adventure">
                     <label for="12">Adventure</label>
-                <input type="checkbox" id="14" name="fantasy value="Fantasy">
+                <input type="checkbox" id="14" name="fantasy" value="Fantasy">
                     <label for="14">Fantasy</label>
                 <input type="checkbox" id="16" name="animation" value="Animation">
                     <label for="16">Animation</label>
