--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="entire-container">
-        <section class="landing-page" data-index="1" id="hidden">
+        <section class="landing-page" data-index="1">
             <h1 class="hello">
                 Hello,
             </h1>
@@ -118,7 +118,7 @@
             </div>
         </section>
 
-        <section class="series-movie" data-index="4">
+        <section class="series-movie" data-index="4" id="hidden">
             <h1 class="hello">
                 What Series or Movie do you want to see?
             </h1>
