added classes to html, added apis and logic to display show, some css added

--- a/index.html
+++ b/index.html
@@ -56,61 +56,61 @@
 
             <div class="btn-group" id="genres-btn-container" role="group" aria-label="Basic outlined example">
                 <input type="radio" id="1" name="genre" value="Biography">
-                    <label for="1">Biography</label>
+                    <div class="display"><label for="1">Biography</label></div>
                 <input type="radio" id="2" name="genre" value="Film-Noir">
-                    <label for="2">Film Noir</label>
+                    <div class="display"><label for="2">Film Noir</label></div>
                 <input type="radio" id="3" name="genre" value="Game-Show">
-                    <label for="3">Game Show</label>
+                    <div class="display"><label for="3">Game Show</label></div>
                 <input type="radio" id="4" name="genre" value="Musical">
-                    <label for="4">Musical</label>
+                    <div class="display"><label for="4">Musical</label></div>
                 <input type="radio" id="5" name="genre" value="Sport">
-                    <label for="5">Sport</label>
+                    <div class="display"><label for="5">Sport</label></div>
                 <input type="radio" id="6" name="genre" value="Short">
-                    <label for="6">Short</label>
+                    <div class="display"><label for="6">Short</label></div>
                 <input type="radio" id="7" name="genre" value="Adult">
-                    <label for="7">Adult</label>
+                    <div class="display"><label for="7">Adult</label></div>
                 <input type="radio" id="12" name="genre" value="Adventure">
-                    <label for="12">Adventure</label>
+                    <div class="display"><label for="12">Adventure</label></div>
                 <input type="radio" id="14" name="genre" value="Fantasy">
-                    <label for="14">Fantasy</label>
+                    <div class="display"><label for="14">Fantasy</label></div>
                 <input type="radio" id="16" name="genre" value="Animation">
-                    <label for="16">Animation</label>
+                    <div class="display"><label for="16">Animation</label></div>
                 <input type="radio" id="18" name="genre" value="Drama">
-                    <label for="18">Drama</label>
+                    <div class="display"><label for="18">Drama</label></div>
                 <input type="radio" id="27" name="genre" value="Horror">
-                    <label for="27">Horror</label>
+                    <div class="display"><label for="27">Horror</label></div>
                 <input type="radio" id="28" name="genre" value="Action">
-                    <label for="28">Action</label>
+                    <div class="display"><label for="28">Action</label></div>
                 <input type="radio" id="35" name="genre" value="Comedy">
-                    <label for="35">Comedy</label>
+                    <div class="display"><label for="35">Comedy</label></div>
                 <input type="radio" id="36" name="genre" value="History">
-                    <label for="36">History</label>
+                    <div class="display"><label for="36">History</label></div>
                 <input type="radio" id="37" name="genre" value="Western">
-                    <label for="37">Western</label>
+                    <div class="display"><label for="37">Western</label></div>
                 <input type="radio" id="53" name="genre" value="Thriller">
-                    <label for="53">Thriller</label>
+                    <div class="display"><label for="53">Thriller</label></div>
                 <input type="radio" id="80" name="genre" value="Crime">
-                    <label for="80">Crime</label>
+                    <div class="display"><label for="80">Crime</label></div>
                 <input type="radio" id="99" name="genre" value="Documentary">
-                    <label for="99">Documentary</label>
+                    <div class="display"><label for="99">Documentary</label></div>
                 <input type="radio" id="878" name="genre" value="Science-Fiction">
-                    <label for="878">Science Fiction</label>
+                    <div class="display"><label for="878">Science Fiction</label></div>
                 <input type="radio" id="9648" name="genre" value="Mystery">
-                    <label for="9648">Mystery</label>
+                    <div class="display"><label for="9648">Mystery</label></div>
                 <input type="radio" id="10402" name="genre" value="Music">
-                    <label for="10402">Music</label>
+                    <div class="display"><label for="10402">Music</label></div>
                 <input type="radio" id="10749" name="genre" value="Romance">
-                    <label for="10749">Romance</label>
+                    <div class="display"><label for="10749">Romance</label></div>
                 <input type="radio" id="10751" name="genre" value="Family">
-                    <label for="10751">Family</label>
+                    <div class="display"><label for="10751">Family</label></div>
                 <input type="radio" id="10752" name="genre" value="War">
-                    <label for="10752">War</label>
+                    <div class="display"><label for="10752">War</label></div>
                 <input type="radio" id="10763" name="genre" value="News">
-                    <label for="10763">News</label>
+                    <div class="display"><label for="10763">News</label></div>
                 <input type="radio" id="10764" name="genre" value="Reality">
-                    <label for="10764">Reality</label>
+                    <div class="display"><label for="10764">Reality</label></div>
                 <input type="radio" id="10767" name="genre" value="Talk-Show">
-                    <label for="10767">Talk Show</label>
+                    <div class="display"><label for="10767">Talk Show</label></div>
             </div>
 
             <div class="arrow-icon-container">
@@ -125,9 +125,9 @@
 
             <div class="btn-group" id="type-btn-container" role="group" aria-label="Basic outlined example">
                 <input type="radio" id="movie" name="type" value="Movie">
-                    <label for="movie">Movie</label>
+                    <div class="movie"><label for="movie">Movie</label></div>
                 <input type="radio" id="show" name="type" value="Show">
-                    <label for="show">Show</label>
+                    <div class="show"><label for="show">Show</label></div>
             </div>
 
             <div class="arrow-icon-container">
