--- a/index.html
+++ b/index.html
@@ -137,24 +137,15 @@
 
         <section class="results" data-index="5" id="hidden">
             <div class="show-container">
-                <video id="myVideo" width="320" height="176">
-                    <script src="trailer" type="video/mp4"></script>
-                    Your browser does not support HTML5 video.
-                </video>
+                <iframe id="myVideo" width="320" height="176" src="https://www.youtube.com/watch?v="></iframe>
             </div>
 
             <div class="show-container">
-                <video id="myVideo" width="320" height="176">
-                    <source src="trailer" type="video/mp4">
-                    Your browser does not support HTML5 video.
-                </video>
+                <iframe id="myVideo" width="320" height="176" src="https://www.youtube.com/watch?v="></iframe>
             </div>
 
             <div class="show-container">
-                <video id="myVideo" width="320" height="176">
-                    <script src="trailer" type="video/mp4"></script>
-                    Your browser does not support HTML5 video.
-                </video>
+                <iframe id="myVideo" width="320" height="176" src="https://www.youtube.com/watch?v="></iframe>
             </div>
         </section>
     </div>
