Removed class hidden for styling

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </h2>
         </section>
 
-        <section class="streaming-service" id="hidden" data-index="2">
+        <section class="streaming-service" data-index="2">
             <h1 class="hello">
                 What streaming service do you prefer?
             </h1>
@@ -49,7 +49,7 @@
             </div>
         </section>
 
-        <section class="genres" id="hidden" data-index="3">
+        <section class="genres" data-index="3">
             <h1 class="hello">
                 What genre do want to watch?
             </h1>
@@ -118,7 +118,7 @@
             </div>
         </section>
 
-        <section class="series-movie" data-index="4" id="hidden">
+        <section class="series-movie" data-index="4">
             <h1 class="hello">
                 What Series or Movie do you want to see?
             </h1>
@@ -135,7 +135,7 @@
             </div>
         </section>
 
-        <section class="results" data-index="5" id="hidden">
+        <section class="results" data-index="5">
             <div class="show-container">
 
             </div>
