css styling additions

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             </div>
 
             <h2>
-                Let's pick something to watch today.
+                Let's find something to watch.
             </h2>
         </section>
 
-        <section class="streaming-service" id="hidden" data-index="2">
+        <section class="streaming-service" data-index="2">
             <h1 class="hello">
-                What streaming service do you prefer?
+                 What's your go-to streaming service?
             </h1>
 
             <div class="btn-group" id="services-btn-container" role="group" aria-label="Basic outlined example">
@@ -49,9 +49,9 @@
             </div>
         </section>
 
-        <section class="genres" id="hidden" data-index="3">
+        <section class="genres" data-index="3">
             <h1 class="hello">
-                What genre do want to watch?
+                Any genres look good?
             </h1>
 
             <div class="btn-group" id="genres-btn-container" role="group" aria-label="Basic outlined example">
@@ -118,16 +118,17 @@
             </div>
         </section>
 
-        <section class="series-movie" data-index="4" id="hidden">
-            <h1 class="hello">
-                What Series or Movie do you want to see?
-            </h1>
-
+        <section class="series-movie" data-index="4">
+            <h1 class="hello">Movie or show? 
+                <br>
+                You make the call.</h1>
+                
             <div class="btn-group" id="type-btn-container" role="group" aria-label="Basic outlined example">
-                <input type="radio" id="movie" name="type" value="Movie">
+               <input type="radio" id="show" name="type" value="Show">
+                    <label for="show">Show</label> 
+                    <input type="radio" id="movie" name="type" value="Movie">
                     <label for="movie">Movie</label>
-                <input type="radio" id="show" name="type" value="Show">
-                    <label for="show">Show</label>
+                
             </div>
 
             <div class="arrow-icon-container">
